Fix sticky row border on firefox

--- a/_sass/pm-styles/_pm-table.scss
+++ b/_sass/pm-styles/_pm-table.scss
@@ -55,6 +55,7 @@
 			top: 0;
 			background: var(--bgcolor-main-area, $white);
 			z-index: 1;
+			background-clip: padding-box;
 
 			&::after {
 				content: '';
